sample9__upgrade-deployment/canary/nginx-16.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v16
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v16
  template:
    metadata:
      labels:
        app: nginx
        version: v16
    spec:
      containers:
        - name: nginx
          image: nginx:1.16.1
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html/index.html
              name: index-html
              subPath: index.html
      volumes:
        - name: index-html
          configMap:
            name: nginx-v16
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-v16
spec:
  selector:
    app: nginx
    version: v16
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 80
