sample9__upgrade-deployment/canary/ingress-14.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-v14
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-v14
                port:
                  number: 8080
