sample9__upgrade-deployment/canary/ingress-16.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-v16
  annotations:
#    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "25"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-v16
                port:
                  number: 8081
